--- a/_includes/social.html
+++ b/_includes/social.html
@@ -14,7 +14,7 @@
             function revealEmail() {
             var email = decodeURIComponent(user) + '@' + decodeURIComponent(domain); // reassemble and decode the email
             // Display the email address in a popup
-            window.alert("Email me at: " + email);
+            window.alert("Email me at: <br>" + email);
             }
             </script>
             {% endif %}
